--- a/EH-All-Matches.html
+++ b/EH-All-Matches.html
@@ -15,6 +15,8 @@
   <script type="text/javascript">
     var currentStrategy = EURO_HANDICAP_ID;
   </script>
+        <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
+        <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/AllMatches.js" "="" defer=""></script>
     <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
