--- a/EH-Insert-Team.html
+++ b/EH-Insert-Team.html
@@ -15,16 +15,16 @@
   <script type="text/javascript">
     var currentStrategy = 2;
   </script>
-        <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
-        <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
+  <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
+  <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/AllTeams.js" defer=""></script>
-    <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Federo:400">
-    <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
-    <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
+  <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
+  <link id="u-theme-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+  <link id="u-theme-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+  <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Federo:400">
 
 
   <script type="application/ld+json">{
@@ -137,19 +137,26 @@
           style="padding: 9px;">
           <div class="u-form-group u-form-name u-form-group-1">
             <label for="name-6797" class="u-custom-font u-font-source-sans-pro u-label">Name</label>
-            <input type="text" placeholder="Name" id="name-6797" name="name" class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1" required="">
+            <input type="text" placeholder="Name" id="name-6797" name="name"
+              class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1"
+              required="">
           </div>
           <div class="u-form-url u-form-group u-form-group-2">
             <label for="url-6797" class="u-custom-font u-font-source-sans-pro u-label">URL</label>
-            <input type="text" placeholder="URL" id="url-6797" name="statsUrl" class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1" required="">
+            <input type="text" placeholder="URL" id="url-6797" name="statsUrl"
+              class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1"
+              required="">
           </div>
           <div class="u-form-url u-form-group u-form-group-2">
             <label for="analid-6797" class="u-custom-font u-font-source-sans-pro u-label">Analysis Code</label>
-            <input type="text" placeholder="Analysis Code" id="analid-6797" name="analysisCode" class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1" required="">
+            <input type="text" placeholder="Analysis Code" id="analid-6797" name="analysisCode"
+              class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1"
+              required="">
           </div>
           <div class="u-form-url u-form-group u-form-group-3">
-            <label for="url-6797" class="u-custom-font u-font-source-sans-pro u-label">stake</label>
-            <input type="text" placeholder="Initial Stake" id="stake-6797" name="initialStake" class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1">
+            <label for="url-6797" class="u-custom-font u-font-source-sans-pro u-label">Target Profit</label>
+            <input type="text" placeholder="Target Profit" id="stake-6797" name="initialStake"
+              class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1">
           </div>
           <div class="u-form-url u-form-group u-form-group-4">
             <label for="cars">Season:</label>
@@ -162,7 +169,7 @@
           </div>
           <div class="u-form-group u-form-submit u-form-group-3"
             style="margin-left: auto; margin-right: auto; text-align: center;">
-            <a onclick="insertLeague()" class="u-btn u-btn-round u-btn-submit u-button-style u-radius-50"
+            <a onclick="insertTeam()" class="u-btn u-btn-round u-btn-submit u-button-style u-radius-50"
               style="background-color: #a88a73;">Submit</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
