--- a/Draws-Hunter.html
+++ b/Draws-Hunter.html
@@ -292,7 +292,24 @@
           </tbody>
         </table>
       </div>
-      <div class="paginator" style="margin: 40px; display: flex; justify-content: center;"> </div>
+      <div class="u-table u-table-responsive u-table-1 legendDiv" style="margin-top: 50px; margin-bottom: 50px; max-width: 70%;margin-left: auto;margin-right: auto;">
+        <table class="mytable">
+          <colgroup>
+            <col width="15%">
+            <col width="85%">
+          </colgroup>
+          <thead class="u-custom-font u-grey-50 u-heading-font u-palette-4-dark-3 u-table-header u-table-header-1">
+            <tr >
+              <th class="u-table-cell" style="background-color: #9fd5ef;"></th>
+              <th class="u-table-cell" style="background-color: #e5e5e5; color: black;">inserted and active team hunting for a draw</th>
+            </tr>
+            <tr >
+              <th class="u-table-cell" style="background-color: #dadcb9;"></th>
+              <th class="u-table-cell" style="background-color: #e5e5e5; color: black;">inserted team waiting for a decent no-draw sequence
+            </tr>
+          </thead>
+        </table>
+      </div>
     </div>
   </section>
 
