add refresh button in bets page

--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -19,7 +19,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/BetsPage.js" "="" defer=""></script>
     <link rel=" stylesheet" href="css/modalDialogBox.css" media="screen">
     <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
-    
+
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -137,7 +137,8 @@
         padding-right: 20px;
         padding-bottom: 0px;
     ">
-          <canvas id="graphBk" style="max-width:100%; max-height:100%;display:unset; background-color: rgb(138 141 149); "></canvas>
+          <canvas id="graphBk"
+            style="max-width:100%; max-height:100%;display:unset; background-color: rgb(138 141 149); "></canvas>
 
         </div>
       </div>
@@ -172,8 +173,8 @@
             <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-3">
               <img alt="" class="u-align-center u-image u-image-default u-image-3" src="images/pie-chart.png"
                 data-image-width="512" data-image-height="512">
-              <h5 id="roi-stat"
-                class="u-align-center-lg u-align-center-xl u-text u-text-palette-3-dark-1 u-text-5"></h5>
+              <h5 id="roi-stat" class="u-align-center-lg u-align-center-xl u-text u-text-palette-3-dark-1 u-text-5">
+              </h5>
               <p class="u-align-center-lg u-align-center-xl u-custom-font u-font-raleway u-text u-text-6">ROI</p>
             </div>
           </div>
@@ -199,8 +200,7 @@
       <div
         class="u-align-center-sm u-align-center-xs u-border-2 u-border-black u-border-no-left u-border-no-right u-form u-form-1">
         <form method="" href="" onsubmit="insertBet()"
-          class="u-clearfix u-form-horizontal u-form-spacing-8 u-inner-form"
-          style="padding: 9px;">
+          class="u-clearfix u-form-horizontal u-form-spacing-8 u-inner-form" style="padding: 9px;">
           <div class="u-form-group u-form-name">
             <label for="name-5c16" class="u-custom-font u-font-source-sans-pro u-label">Odd</label>
             <input type="text" placeholder="Enter bet odd" id="newBetOdd" name="odd"
@@ -219,15 +219,19 @@
               class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-3">
           </div>
           <div class="u-align-center u-form-group u-form-submit">
-            <a  class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Submit</a>
+            <a
+              class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Submit</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </form>
       </div>
-
+      <div class="u-align-center-sm u-align-center-xs">
+        <a type="button" href="javascript:window.location.href=window.location.href"
+          class="u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1"
+          style="padding: 0px 10px; font-size: 30px; margin-top: 50px; margin-bottom: auto; overflow: hidden; max-width: 60%; background-color: #4b6256;">&#x21bb;</a>
+      </div>
     </div>
 
-    </div>
   </section>
 
   <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-be3e">
