rearrange teams tables to fibonacci sequence

--- a/DH-All-Teams.html
+++ b/DH-All-Teams.html
@@ -130,16 +130,16 @@
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
         <table class="u-table-entity">
           <colgroup>
-            <col width="25%">
-            <col width="8%">
-            <col width="8%">
+            <col width="30%">
+            <col width="10%">
+            <col width="12%">
+            <col width="12%">
+            <col width="10%">
             <col width="10%">
             <col width="8%">
-            <col width="8%">
-            <col width="6%">
-            <col width="6%">
-            <col width="15%">
-            <col width="8%">
+            <!-- <col width="6%">
+            <col width="15%"> -->
+            <col width="10%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
@@ -150,8 +150,8 @@
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd Avg</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Balance</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">ROI</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Profit Goal</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update PG</th>
+              <!-- <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Profit Goal</th>
+              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update PG</th> -->
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Archive</th>
             </tr>
           </thead>
@@ -164,16 +164,16 @@
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
         <table class="u-table-entity">
           <colgroup>
-            <col width="25%">
-            <col width="8%">
-            <col width="8%">
+            <col width="30%">
+            <col width="10%">
+            <col width="12%">
+            <col width="12%">
+            <col width="10%">
             <col width="10%">
             <col width="8%">
-            <col width="8%">
-            <col width="6%">
-            <col width="6%">
-            <col width="15%">
-            <col width="8%">
+            <!-- <col width="6%">
+            <col width="15%"> -->
+            <col width="10%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
@@ -184,8 +184,8 @@
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd Avg</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Balance</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">ROI</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Profit Goal</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update PG</th>
+              <!-- <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Profit Goal</th>
+              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update PG</th> -->
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Archive</th>
             </tr>
           </thead>
@@ -198,13 +198,13 @@
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
         <table class="u-table-entity">
           <colgroup>
-            <col width="25%">
-            <col width="12%">
+            <col width="30%">
+            <col width="15%">
             <col width="10%">
             <col width="10%">
             <col width="10%">
-            <col width="10%">
-            <col width="6%">
+            <!-- <col width="10%"> -->
+            <col width="8%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
@@ -213,7 +213,7 @@
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Season</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd Avg</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Balance</th>
-              <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Profit Goal</th>
+              <!-- <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Profit Goal</th> -->
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">ROI</th>
             </tr>
           </thead>
