--- a/DH-Insert-Team.html
+++ b/DH-Insert-Team.html
@@ -147,7 +147,7 @@
               class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1"
               required="">
           </div>
-          <div class="u-form-url u-form-group u-form-group-2">
+          <!-- <div class="u-form-url u-form-group u-form-group-2">
             <label for="analid-6797" class="u-custom-font u-font-source-sans-pro u-label">Analysis Code</label>
             <input type="text" placeholder="Analysis Code" id="analid-6797" name="analysisCode"
               class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1"
@@ -157,7 +157,7 @@
             <label for="url-6797" class="u-custom-font u-font-source-sans-pro u-label">Target Profit</label>
             <input type="text" placeholder="Target Profit" id="stake-6797" name="initialStake"
               class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1">
-          </div>
+          </div> -->
           <div class="u-form-url u-form-group u-form-group-4">
             <label for="cars">Season:</label>
             <select id="teamSeason">
