--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -136,9 +136,10 @@
         padding-left: 20px;
         padding-right: 20px;
         padding-bottom: 0px;
+        background-color: rgb(203, 216, 221, 0.2);
     ">
           <canvas id="graphBk"
-            style="max-width:100%; max-height:100%;display:unset; background-color: rgb(138 141 149); "></canvas>
+            style="max-width:100%; max-height:100%;display:unset; "></canvas>
 
         </div>
       </div>
