--- a/Only-Draws.html
+++ b/Only-Draws.html
@@ -136,6 +136,7 @@
         padding-left: 20px;
         padding-right: 20px;
         padding-bottom: 0px;
+        background-color: rgb(203, 216, 221, 0.2);
     ">
           <canvas id="graph" style="max-width:100%; max-height:100%;"></canvas>
           <form action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
