add new pages for historic stats data

--- a/EH-All-Matches.html
+++ b/EH-All-Matches.html
@@ -93,6 +93,10 @@
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
             </li>
+            <li class="u-nav-item"><a
+              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+              href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
+          </li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -115,6 +119,9 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bankrolls.html"
                     style="padding: 10px 20px;">Bankrolls</a>
                 </li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
+                  style="padding: 10px 20px;">Historic Stats</a>
+              </li>
               </ul>
             </div>
           </div>
