--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
             </li>
+            <li class="u-nav-item"><a
+              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+              href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
+          </li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -99,6 +103,9 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bankrolls.html"
                     style="padding: 10px 20px;">Bankrolls</a>
                 </li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
+                  style="padding: 10px 20px;">Historic Stats</a>
+              </li>
               </ul>
             </div>
           </div>
@@ -122,29 +129,35 @@
           <div class="u-align-left u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Only-Draws.html">
               <a
-                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1">Only
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Only
                 Draws
               </a>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-2" data-href="Euro-Handicap.html">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Euro-Handicap.html">
               <a
-                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-2">Euro
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Euro
                 Handicap</a>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-3" data-href="Draws-Hunter.html">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Draws-Hunter.html">
               <a
-                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-3">Draws
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Draws
                 Hunter</a>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-4" data-href="Bankrolls.html">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Bankrolls.html">
               <a
-                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-4">Bankrolls</a>
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Bankrolls</a>
+            </div>
+          </div>
+          <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="HistoricStatsData.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Historic Stats</a>
             </div>
           </div>
         </div>
