--- a/MarginWinsHistoricStats.html
+++ b/MarginWinsHistoricStats.html
@@ -130,11 +130,12 @@
         class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="history.back()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
       <h4 class="u-text u-text-default u-text-1 teamNameTitle" style="text-shadow: none;"></h4>
+      <img src="images/shooting-game.png" style="display: block; margin: 40px auto; width: 10%;">
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
-        <table class="u-table-entity" style="width: 125%; margin-left: -12%; margin-right: auto;">
+        <table class="u-table-entity" style="width: 120%; margin-left: -10%; margin-right: auto;">
           <colgroup>
             <col width="6%">
-            <col width="32%">
+            <col width="28%">
             <col width="6%">
             <col width="7%">
             <col width="6%">
@@ -156,7 +157,8 @@
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">no margin-wins sequence</th>
             </tr>
           </thead>
-          <tbody id="marginWinsDataByTeamTable" class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body">
+          <tbody id="marginWinsDataByTeamTable"
+            class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body">
           </tbody>
         </table>
       </div>
