try set numeric type to some form fields

--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -211,13 +211,13 @@
           class="u-clearfix u-form-horizontal u-form-spacing-8 u-inner-form" style="padding: 9px;">
           <div class="u-form-group u-form-name">
             <label for="name-5c16" class="u-custom-font u-font-source-sans-pro u-label">Odd</label>
-            <input type="text" placeholder="Enter bet odd" id="newBetOdd" name="odd"
+            <input type="numeric" placeholder="Enter bet odd" id="newBetOdd" name="odd"
               class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1"
               required="required">
           </div>
           <div class="u-form-email u-form-group">
             <label for="email-5c16" class="u-custom-font u-font-source-sans-pro u-label">Stake</label>
-            <input type="text" placeholder="Enter stake" id="newBetStake" name="stake"
+            <input type="numeric" placeholder="Enter stake" id="newBetStake" name="stake"
               class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-2"
               required="required">
           </div>
