implement bankroll stats

--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Bets-Page.css" media="screen">
   <link rel="stylesheet" href="css/StrategyPage.css" media="screen">
+  <link rel="stylesheet" href="css/BankrollStatsBlock.css" media="screen">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
     <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
@@ -202,6 +203,71 @@
       </div>
     </div>
   </section>
+
+  <section class="bkroll-u-align-center bkroll-u-clearfix bkroll-u-grey-10 bkroll-u-section-3" id="sec-9862" style="margin-bottom: -600px;">
+    <div class="bkroll-u-clearfix bkroll-u-sheet bkroll-u-sheet-1">
+      <div class="bankroll-stats bkroll-u-expanded-width-lg bkroll-u-expanded-width-md bkroll-u-expanded-width-sm bkroll-u-expanded-width-xl bkroll-u-list bkroll-u-list-1" style="max-width: 60%; margin: 30px auto;">
+        <div class="bkroll-u-repeater bkroll-u-repeater-1">
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-1" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-oddAvg" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-1">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-1">odd avg</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-2" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-stakeAvg" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-2">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-2">3.4 <br> stake avg<br></p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-3" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-longGreen" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-3">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-3">longest green series</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-4" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-longRed" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-4">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-4">longest red series</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-5" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-greensRate" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-5">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-5">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-6" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-redsRate" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-6">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-6">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-7" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-highProfit" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-7">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-7">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-8" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-highExpens" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-8">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-8">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-9" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-highOdd" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-9">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-9">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-10" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-highStake" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-10">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-10">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+          <div class="bkroll-u-container-style bkroll-u-list-item bkroll-u-opacity bkroll-u-opacity-70 bkroll-u-radius-50 bkroll-u-repeater-item bkroll-u-shape-round bkroll-u-white bkroll-u-list-item-11" style="max-width: 80%; margin: auto;">
+            <div id="bkroll-highGreenOdd" class="bkroll-u-container-layout bkroll-u-similar-container bkroll-u-container-layout-11">
+              <!-- <p class="bkroll-u-align-center bkroll-u-text bkroll-u-text-default bkroll-u-text-11">Sample text. Click to select the Text Element.</p> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="u-align-center u-clearfix u-grey-10 u-section-1" id="sec-e6e8">
     <div class="u-clearfix u-sheet u-sheet-1" id="betsList" style="margin-bottom: 50px;">
       <p class="u-text u-text-default u-text-1">Add New Bet</p>
